fix button on mobile, adjust font sizes

--- a/style.scss
+++ b/style.scss
@@ -175,29 +175,15 @@ a {
   font: $ionize-button-font;
   text-transform: uppercase;
   border-radius: 10px;
-  transition: transform 0.1s, color 0.2s, border-color 0.2s, box-shadow 0.5s;
   @include vendor-prefixes(box-shadow, 0px 5px 15px hsla(0,0%,0%,0.5));
-  
-  &:hover {
-    transform: scale(1.2);
-    @include vendor-prefixes(animation, pulse 0.3s linear 0s infinite alternate);
-    @include vendor-prefixes(box-shadow, 0px 0px 55px 5px white);
-    color: white;
-    border-color: #ccc;
-  }
+
   &:active {
-    transition: transform 0s, border-color 0s, background 0s, box-shadow 0.5s;
-    @include vendor-prefixes(animation, 0);
-    transform: scale(1.1);
     background: hsl($base-hue,50%,30%);
     color: black;
     border-color: black;
   }
 }
 
-.glowjump {
-  @include vendor-prefixes(animation, glow_jump 0.4s ease 3s 2 alternate);
-}
 
 @include keyframe(glow_jump) {
   from { 
@@ -259,7 +245,16 @@ a {
 
   h1 {
     margin-top: 0.5em;
+    font-size: 1.6em;
     text-align: center;
+  }
+
+  h2 {
+    font-size: 1.2em;
+  }
+
+  h3 {
+    font-size: 1.3em;
   }
 
   img,
@@ -304,6 +299,28 @@ a {
 }
 
 @media screen and (min-width: 868px) {
+
+  .glowjump {
+    @include vendor-prefixes(animation, glow_jump 0.4s ease 3s 2 alternate);
+  }
+
+  .topbar button {
+    transition: transform 0.1s, color 0.2s, border-color 0.2s, box-shadow 0.5s;
+    
+    &:hover {
+      transform: scale(1.2);
+      @include vendor-prefixes(animation, pulse 0.3s linear 0s infinite alternate);
+      @include vendor-prefixes(box-shadow, 0px 0px 55px 5px white);
+      color: white;
+      border-color: #ccc;
+    }
+
+    &:active {
+      transition: transform 0s, border-color 0s, background 0s, box-shadow 0.5s;
+      @include vendor-prefixes(animation, 0);
+      transform: scale(1.1);
+    }
+  }
 
   .master {
     margin: 80px auto 20px auto;
